--- a/monitoring/helm-prometheus-grafana.yaml
+++ b/monitoring/helm-prometheus-grafana.yaml
@@ -30,12 +30,7 @@
       retries: 10
       delay: 10
 
-    - name: Copy grafana-export-service.yaml to master node
-      copy:
-        src: ./grafana-export-service.yaml
-        dest: /tmp/grafana-export-service.yaml
-
-    - name: Create Grafana service
-      shell: kubectl apply -f /tmp/grafana-export-service.yaml
+    - name: Patch grafana service to NodePort with port 31100
+      shell: 'kubectl patch svc kube-prometheus-stack-grafana -n monitoring -p "{\"spec\": {\"type\": \"NodePort\", \"ports\": [{\"port\": 80, \"nodePort\": 31100}]}}"'
 
 # Run using: ansible-playbook -i scripts/hosts monitoring/helm-prometheus-grafana.yaml
