modify ha k8s cluster

--- a/configuration/helm-prometheus-grafana.yaml
+++ b/configuration/helm-prometheus-grafana.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Setup Prometheus stack on GCP Kubernetes cluster
-  hosts: masters
+  hosts: firstMaster
   tasks:
     - name: Create monitoring namespace
       shell: kubectl create namespace monitoring
