--- a/configuration/master-playbook.yaml
+++ b/configuration/master-playbook.yaml
@@ -11,13 +11,8 @@
 
     # Initializes the Kubernetes cluster with a specified pod network CIDR and control plane endpoint using kubeadm.
     - name: Execute kubeadm init command to initialize the cluster
-      shell: "kubeadm init --pod-network-cidr=10.244.0.0/16 --control-plane-endpoint '{{ lb_ip.stdout }}' --upload-certs"
+      shell: "kubeadm init --pod-network-cidr=10.244.0.0/16 --control-plane-endpoint '{{ lb_ip.stdout }}'"
       register: kubeadm_init_output
-
-    # Extract certificate key from kubeadm init output
-    - name: Extract certificate key
-      set_fact:
-        certificate_key: "{{ kubeadm_init_output.stdout | regex_search('(certificate-key[\\s=]+)([a-z0-9]+)', '\\2') | first }}"
 
     # Sets up the KUBECONFIG environment variable to enable kubectl to communicate with the cluster.
     - name: Set KUBECONFIG environment variable
@@ -46,11 +41,74 @@
           token: "{{ K8S_TOKEN.stdout }}"
           hash: "{{ K8S_MASTER_CA_HASH.stdout }}"
           ip_port: "{{ lb_ip.stdout }}"
-          certificate_key: "{{ certificate_key }}"
         dest: ./k8s_join_info.yml
+
+        # Fetch ca.crt from the first master
+    - name: Fetch ca.crt from firstMaster
+      fetch:
+        src: /etc/kubernetes/pki/ca.crt
+        dest: "./"
+        flat: yes
+
+    # Fetch sa.key from the first master
+    - name: Fetch sa.key from firstMaster
+      fetch:
+        src: /etc/kubernetes/pki/sa.key
+        dest: "./"
+        flat: yes
+    
+    # Fetch additional certificate files from the first master
+    - name: Fetch additional certificate files from firstMaster
+      fetch:
+        src: "/etc/kubernetes/pki/{{ item }}"
+        dest: "./"
+        flat: yes
+      loop:
+        - ca.key
+        - sa.pub
+        - front-proxy-ca.crt
+        - front-proxy-ca.key
+
+    # Fetch additional certificate files from the first master
+    - name: Fetch additional certificate files from firstMaster etcd
+      fetch:
+        src: "/etc/kubernetes/pki/{{ item }}"
+        dest: "./etcd/"
+        flat: yes
+      loop:
+        - etcd/ca.crt
+        - etcd/ca.key
 
 - hosts: otherMasters
   tasks:
+     # Ensure the /etc/kubernetes/pki and /etc/kubernetes/pki/etcd directories exist
+    - name: Ensure Kubernetes PKI directories exist
+      become: yes
+      file:
+        path: "/etc/kubernetes/pki/{{ item }}"
+        state: directory
+        mode: '0755'
+      loop:
+        - ""
+        - etcd
+
+    # Copy the certificate files to the other masters
+    - name: Copy certificate files to otherMasters
+      become: yes
+      copy:
+        src: "{{ item }}"
+        dest: "/etc/kubernetes/pki/{{ item }}"
+        mode: '0600'
+      loop:
+        - ca.crt
+        - ca.key
+        - sa.key
+        - sa.pub
+        - front-proxy-ca.crt
+        - front-proxy-ca.key
+        - etcd/ca.crt
+        - etcd/ca.key
+
     # Loads the Kubernetes join information from a file.
     # This file contains the token, CA hash, and control plane IP/port required for joining the cluster.
     - name: Load K8S join information
@@ -62,7 +120,7 @@
     # Uses the token, CA hash, and control plane IP/port from the loaded join information.
     - name: join k8s cluster
       shell: >
-        kubeadm join --token={{ token }} --discovery-token-ca-cert-hash sha256:{{ hash }} --control-plane --certificate-key {{ certificate_key }} {{ ip_port }}
+        kubeadm join --token={{ token }} --discovery-token-ca-cert-hash sha256:{{ hash }} --control-plane {{ ip_port }}
 
     # Sets up the KUBECONFIG environment variable to enable kubectl to communicate with the cluster.
     - name: Set KUBECONFIG environment variable
@@ -72,7 +130,7 @@
         sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
         sudo chown $(id -u):$(id -g) $HOME/.kube/config
 
-- hosts: first-master
+- hosts: firstMaster
   tasks:
     # Read load balancer IP from the file
     - name: Apply Calico networking
