--- a/configuration/deploy-argocd.yaml
+++ b/configuration/deploy-argocd.yaml
@@ -27,14 +27,6 @@
     - name: Get the NodePort assigned to Argo CD
       shell: kubectl get svc argocd-server -n argocd -o jsonpath='{.spec.ports[?(@.port==80)].nodePort}'
       register: argocd_nodeport
-    
-    # Save Argo CD NodePort to a file
-    - name: Save Argo CD NodePort to a file
-      delegate_to: localhost
-      lineinfile:
-        path: ./nodeports
-        line: "{{ argocd_nodeport.stdout }}"
-        create: yes
 
     # Ensure all Argo CD services are running before proceeding.
     - name: Wait for all Argo CD services to be running
@@ -89,16 +81,16 @@
     - name: Apply Argo CD CRD
       shell: kubectl apply -f /tmp/argocd-crd.yaml
     
-    - name: Wait for nginx-service to be available
-      shell: kubectl get svc nginx-service -n sdtd-project
-      register: nginx_service_check
-      until: nginx_service_check.rc == 0
+    - name: Wait for app to be available
+      shell: kubectl get svc frontend -n sdtd-project
+      register: app_check
+      until: app_check.rc == 0
       retries: 30
       delay: 10
 
     # Get the NodePort assigned to the application
     - name: Get the NodePort assigned to application
-      shell: kubectl get svc frontend -n sdtd-project -o jsonpath='{.spec.ports[?(@.port==3000)].nodePort}'
+      shell: kubectl get svc frontend -n sdtd-project -o jsonpath='{.spec.ports[?(@.port==80)].nodePort}'
       register: app_nodeport
     
     # Save Argo CD NodePort to a file
@@ -107,4 +99,17 @@
       lineinfile:
         path: ./nodeports
         line: "{{ app_nodeport.stdout }}"
+        create: yes
+
+    # Get the NodePort assigned to the application
+    - name: Get the NodePort assigned to the application backend
+      shell: kubectl get svc backend-nodeport -n sdtd-project -o jsonpath='{.spec.ports[?(@.port==3001)].nodePort}'
+      register: back_nodeport
+    
+    # Save Argo CD NodePort to a file
+    - name: Save Backend NodePort to a file
+      delegate_to: localhost
+      lineinfile:
+        path: ./nodeports
+        line: "{{ back_nodeport.stdout }}"
         create: yes
