--- a/configuration/update-lb-ports.yaml
+++ b/configuration/update-lb-ports.yaml
@@ -11,6 +11,7 @@
         - { line: 1 }
         - { line: 2 }
         - { line: 3 }
+        - { line: 4 }
       delegate_to: localhost
 
     # Replace ports in the HAProxy configuration file
@@ -26,11 +27,17 @@
         regexp: '31000'
         replace: "{{ nodeports.results[1].stdout }}"
 
+    - name: Replace port 33000 in HAProxy configuration
+      replace:
+        path: /etc/haproxy/haproxy.cfg
+        regexp: '33000'
+        replace: "{{ nodeports.results[2].stdout }}"
+
     - name: Replace port 32000 in HAProxy configuration
       replace:
         path: /etc/haproxy/haproxy.cfg
         regexp: '32000'
-        replace: "{{ nodeports.results[2].stdout }}"
+        replace: "{{ nodeports.results[3].stdout }}"
 
     # Restart the HAProxy service to apply the new configuration.
     - name: Restart HAProxy service
