--- a/configuration/argocd-secret-access.yaml
+++ b/configuration/argocd-secret-access.yaml
@@ -1,11 +1,12 @@
+# This is a Kubernetes Secret
 apiVersion: v1
 kind: Secret
 metadata:
-  name: private-sdtd-repo
-  namespace: argocd
+  name: private-sdtd-repo # The name of the Secret
+  namespace: argocd # The namespace where the Secret is deployed
   labels:
-    argocd.argoproj.io/secret-type: repository
+    argocd.argoproj.io/secret-type: repository # A label indicating that this Secret is used for a repository
 stringData:
-  url: https://gitlab.com/Gh-Badr/weather-forecast.git
-  password: "glpat-bzCLz5xviTQ9sLdXb-VR"
-  username: "Hamdane10"
+  url: https://gitlab.com/Gh-Badr/weather-forecast.git # The URL of the Git repository
+  password: "glpat-bzCLz5xviTQ9sLdXb-VR" # The password (or token) for the Git repository
+  username: "Hamdane10" # The username for the Git repository
