--- a/configuration/components.yaml
+++ b/configuration/components.yaml
@@ -1,3 +1,4 @@
+# This configuration file is used to deploy the metrics-server in a Kubernetes cluster.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
