--- a/configuration/conf-k8s-modules.yaml
+++ b/configuration/conf-k8s-modules.yaml
@@ -1,11 +1,11 @@
 ---
-# This playbook configures the required kernel modules and sysctl parameters for a Kubernetes cluster.
+# This Ansible playbook is used to configure the required kernel modules and sysctl parameters for a Kubernetes cluster.
 - name: Configure k8s modules and sysctl params
   hosts: nodes
   become: true
   
   tasks:
-    # The first task creates a configuration file to load the necessary kernel modules at boot time.
+    # This task creates a configuration file to load the necessary kernel modules at boot time.
     - name: Configure modules-load.d
       ansible.builtin.copy:
         content: |
@@ -13,7 +13,7 @@
           br_netfilter
         dest: /etc/modules-load.d/k8s.conf
 
-    # The second task loads the required kernel modules using the modprobe command.
+    # This task loads the required kernel modules using the modprobe command.
     - name: Load k8s modules
       ansible.builtin.modprobe:
         name: "{{ item }}"
@@ -21,7 +21,7 @@
         - overlay
         - br_netfilter
 
-    # The third task sets the required sysctl parameters for network bridging and IP forwarding in a configuration file.
+    # This task sets the required sysctl parameters for network bridging and IP forwarding in a configuration file.
     - name: Configure sysctl params
       ansible.builtin.copy:
         content: |
@@ -30,11 +30,11 @@
           net.ipv4.ip_forward = 1
         dest: /etc/sysctl.d/k8s.conf
 
-    # The fourth task applies the sysctl parameters without needing a reboot.
+    # This task applies the sysctl parameters without needing a reboot.
     - name: Apply sysctl params without reboot
       ansible.builtin.command: sysctl --system
 
-    # The next three tasks check if the required kernel modules are loaded.
+    # The next two tasks check if the required kernel modules are loaded.
     - name: Check br_netfilter module
       ansible.builtin.shell: lsmod | grep br_netfilter
       register: br_netfilter_output
@@ -50,7 +50,7 @@
       ansible.builtin.command: sysctl net.bridge.bridge-nf-call-iptables net.bridge.bridge-nf-call-ip6tables net.ipv4.ip_forward
       register: sysctl_output
 
-    # The last task displays the status of the kernel modules and sysctl parameters.
+    # This task displays the status of the kernel modules and sysctl parameters.
     - name: Display module status and sysctl params
       ansible.builtin.debug:
         msg: "{{ item }}"
