--- a/configuration/configure-lb.yaml
+++ b/configuration/configure-lb.yaml
@@ -1,16 +1,16 @@
 ---
-# This playbook configures HAProxy on the load balancer nodes.
+# This Ansible playbook is used to configure HAProxy on the load balancer nodes.
 - hosts: gateway
   become: true
   tasks:
-    # Install HAProxy on the load balancer nodes.
+    # This task installs the latest version of HAProxy on the load balancer nodes.
     - name: Install HAProxy
       apt:
         name: haproxy
         state: latest
         update_cache: yes
 
-    # Copy the HAProxy configuration file from the local machine to the load balancer nodes.
+    # This task copies the HAProxy configuration file from the local machine to the load balancer nodes.
     - name: Copy HAProxy configuration file
       copy:
         src: ./haproxy.cfg
@@ -19,7 +19,7 @@
         group: root
         mode: '0644'
 
-    # Restart the HAProxy service to apply the new configuration.
+    # This task restarts the HAProxy service on the load balancer nodes to apply the new configuration.
     - name: Restart HAProxy service
       systemd:
         name: haproxy
